# SviMarlin

./: .env.example  .gitignore  BRAND_NAMES.md  BUSINESS_SPEC.md  Cargo.toml  IDEA_REPORT.md  README.md
crates/volarb-bin/: Cargo.toml
crates/volarb-bin/src/: main.rs
crates/volarb-core/: Cargo.toml
crates/volarb-core/src/: lib.rs  market.rs  numeric.rs  position.rs  svi.rs
crates/volarb-core/tests/: serde_roundtrip.rs
crates/volarb-executor/: Cargo.toml
crates/volarb-executor/src/: lib.rs
crates/volarb-indexer/: Cargo.toml
crates/volarb-indexer/src/: lib.rs
crates/volarb-pricing/: Cargo.toml
crates/volarb-pricing/examples/: measure_basis.rs
crates/volarb-pricing/src/: binary.rs  lib.rs  onchain.rs  svi_fit.rs
crates/volarb-pricing/tests/: fixture_schema.rs  onchain_parity.rs
crates/volarb-pricing/tests/fixtures/: _selftest.json  e2e_oracles.json  math_sweep.json
crates/volarb-risk/: Cargo.toml
crates/volarb-risk/src/: lib.rs
crates/volarb-router/: Cargo.toml
crates/volarb-router/src/: lib.rs
crates/volarb-rpc/: Cargo.toml
crates/volarb-rpc/src/: lib.rs
crates/volarb-sui/: Cargo.toml
crates/volarb-sui/src/: capture_points.rs  lib.rs
crates/volarb-venues/: Cargo.toml
crates/volarb-venues/src/: error.rs  lib.rs
crates/volarb-venues/src/hyperliquid/: exchange.rs  info.rs  mod.rs  signing.rs  ws.rs
crates/volarb-venues/tests/: live_testnet.rs
crates/volarb-venues/tests/fixtures/: clearinghouse_state_nonempty.json  l2book_empty.json  l2book_filled.json  meta_and_ctxs_ho.json  meta_ho.json
docs/architecture/: data-flow.mmd  module-dependency.mmd
docs/decisions/: ADR-001-nav-oracle.md  ADR-002-rust-core-engine.md  ADR-003-venue-adapter-trait.md  ADR-004-unwind-window.md  ADR-005-indexer-strategy.md  ADR-006-native-multisig.md  ADR-007-clock-vs-epoch-timestamp.md  README.md
docs/plans/: 2026-05-30-cargo-workspace-volarb-core.md  2026-05-30-volarb-pricing-l1-surface.md  2026-06-01-onchain-pricing-l0-port.md  2026-06-12-l0-parity-basis-harness.md  2026-06-13-hyperliquid-venue-read-path.md  2026-06-22-hyperliquid-venue-write-path.md
docs/security/: threat-model.md
docs/specs/: 2026-05-28-vol-arb-bot-spec.md  2026-05-30-cargo-workspace-volarb-core-design.md  2026-05-30-volarb-pricing-svi-fitter-design.md  2026-05-31-onchain-pricing-decompile-findings.md  2026-06-01-onchain-pricing-l0-port-design.md  2026-06-11-l0-parity-basis-harness-design.md  2026-06-13-hyperliquid-venue-read-path-design.md  2026-06-13-l0-parity-basis-findings.md  2026-06-22-hyperliquid-venue-write-path-design.md
move/: move-notes.md
move/volarb/: Move.toml
move/volarb/sources/: events.move
move/volarb/tests/: events_tests.move
