[package]
name = "volarb-sui"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bcs = "0.2.1"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sui-sdk-types = { version = "0.3.1", features = ["serde"] }
sui-transaction-builder = "0.3.1"
volarb-core.workspace = true
