[package]
name = "volarb-venues"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
volarb-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true }
