[package]
name = "volarb-venues"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
volarb-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures = "0.3"
rmp-serde = "1.3.1"
alloy-primitives = "1.6.0"
alloy-sol-types = "1.6.0"
alloy-signer = "2.1.0"
alloy-signer-local = "2.1.0"
hex = "0.4.3"

[dev-dependencies]
tokio = { workspace = true }
